added the images, connected all the responses for the html files on the server, completed the html content for each html page

--- a/views/index.html
+++ b/views/index.html
@@ -6,5 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Welcome to the DigitalHouse SuperHeroes Collage</h1>
+
+    <a href="turing">Turing</a>
+    <a href="lovelace">Lovelace</a>
+    <a href="hopper">Hopper</a>
+    <a href="hamilton">Hamilton</a>
+    <a href="clarke">Clarke</a>
+    <a href="berners-lee">Sir Tim Barners-lee</a>
+    <a href="babbage">Babbage</a>
+  </body>
 </html>
